--- a/index.html
+++ b/index.html
@@ -9,56 +9,65 @@
   <body>
     <div id="exercise1">
       <!-- Complete Exercise 1 HERE -->
+      <h1>Jim Klouse</h1>
+      <p>I'm a Software Engineer with a distinctive blend of Finance and Teaching experience. My background equips me with analytical precision, methodical problem-solving, and the ability to bridge technical and non-technical communication. I create user-centric solutions that are both reliable and engaging.
+      </p>
     </div>
 
     <div id="exercise2">
       <!-- Complete Exercise 2 HERE -->
+      <ul>
+        <li><a href="www.linkedin.com/in/jim-klouse-b7517b41" target="_blank">LinkedIn</a></li>
+        <li><a href="https://truecoders.io/" target="_blank">TrueCoders</a></li>
+        <li><a href="https://github.com/jimklo83" target= "_blank">GitHub</a></li>
+      </ul>
     </div>
 
     <div id="exercise3">
       <!-- Complete Exercise 3 HERE -->
+      <img src="images/example.png" alt="picture"/>
     </div>
 
     <div id="exercise4">
       <!-- Complete Exercise 4 HERE -->
       <p>
-        I looked down at the board. "The point isn't to win?" I asked. "The
-        point," Bredon said grandly, "is to play a beautiful game." He lifted
+        I looked down at the board. "The <strong>point</strong> isn't to win?" I asked. "The
+        <strong>point</strong>," <span style="color:aqua">Bredan</span> said grandly, "is to <u>play</u> a <em>beautiful</em> game." He lifted
         his hands and shrugged, his face breaking into a beautific smile. "Why
-        would I want to win anything other than a beautiful game?"
+        would I want to win anything other than a <em>beautiful</em> game?"
       </p>
     </div>
 
     <div id="exercise5">
       <!-- Complete Exercise 5 HERE -->
-      <div>
-        <div>
-          <div>
-            <span>
+      <section>
+        <nav>
+          <ul>
+            <li>
               <a href="/">Home</a>
-            </span>
-            <span>
+            </li>
+            <li>
               <a href="/about">About</a>
-            </span>
-            <span>
+            </li>
+            <li>
               <a href="/projects">Projects</a>
-            </span>
-          </div>
-        </div>
-      </div>
+            </li>
+          </ul>
+        </nav>
+      </section>
 
-      <div>
-        <div>
+      <section>
+        <header>
           <h1>Main Heading</h1>
           <p>Author.. Bio...</p>
-        </div>
-        <div>
-          <div>
+        </header>
+        <main>
+          <nav>
             <h2>Sub Heading</h2>
-            <div>
+            <article>
               <p>Lorem ipsum...</p>
-            </div>
-          </div>
+            </article>
+          </nav>
           <div>
             <h2>Sub Heading</h2>
             <p>Lorem ipsum...</p>
@@ -67,26 +76,26 @@
               <p>Lorem ipsum...</p>
             </div>
           </div>
-        </div>
-	</div>
+        </main>
+      </section>
 
-      <div>
-        <div>
-          <div>
-            <span>
+      <footer>
+        <nav>
+          <ul>
+            <li>
               <a href="/privacy">Privacy Policy</a>
-            </span>
-            <span>
+            </li>
+            <li>
               <a href="/terms">Terms and Conditions</a>
-            </span>
-          </div>
-        </div>
+            </li>
+          </ul>
+        </nav>
 
         <div>
           <p>Powered by 🕯️</p>
           <p>&copy; TrueCoders 2021-24</p>
         </div>
-      </div>
+      </footer>
     </div>
 	
   </body>
